--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.jjoe64:graphview:4.2.1'
+    compile 'org.greenrobot:eventbus:3.1.1'
     implementation project(':commons-math3-3.6.1')
+
 }
