--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,8 @@ android {
     }
 }
 
+ext.supportLibraryVersion = '27.1.0'
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.0'
@@ -36,4 +38,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     compile 'com.otaliastudios:cameraview:1.5.0'
+    implementation "com.android.support:exifinterface:$supportLibraryVersion"
 }
+
