--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,8 @@ android {
     }
 }
 
+ext.supportLibraryVersion = '27.1.0'
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.0'
@@ -32,7 +34,10 @@ dependencies {
     implementation project(':commons-math3-3.6.1')
     // compile 'com.github.florent37:camerafragment:1.0.9'
     implementation 'com.github.imangazalievm:circlemenu:2.0.1'
-    implementation 'com.wonderkiln:camerakit:0.13.1'
+//    implementation 'com.wonderkiln:camerakit:0.13.1'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    compile 'com.otaliastudios:cameraview:1.5.0'
+    implementation "com.android.support:exifinterface:$supportLibraryVersion"
 }
+
