--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,12 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.otaliastudios:cameraview:1.5.0'
     implementation "com.android.support:exifinterface:$supportLibraryVersion"
+
+    implementation 'com.facebook.fresco:fresco:1.9.0'
+    compile 'com.github.stfalcon:frescoimageviewer:0.5.0'
+    compile 'com.github.ibosong.CommentGallery:frescozoomablelib:1.0.1'
+    compile 'com.github.ibosong.CommentGallery:largeimagegallerylib:1.0.1'
+    compile 'com.github.ibosong.CommentGallery:commentgallerylib:1.0.1'
 }
 
 Properties props = new Properties()
