--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:required="true" />
 
     <application
+        android:name=".ImageViewer.GalleryApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -50,7 +51,10 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".CameraView.PicturePreviewActivity" />
         <activity android:name=".CameraView.VideoPreviewActivity" />
-
+        <activity android:name=".ImageViewer.CommentGalleryActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ImageViewer.GalleryActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <service
             android:name=".myo_manage.MyoService"
             android:enabled="true"
