--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,7 @@ dependencies {
     implementation 'com.github.ibosong.CommentGallery:frescozoomablelib:1.0.1'
     implementation 'com.github.ibosong.CommentGallery:largeimagegallerylib:1.0.1'
     implementation 'com.github.ibosong.CommentGallery:commentgallerylib:1.0.1'
-
+    implementation 'com.github.GrenderG:Toasty:1.3.0'
 }
 
 Properties props = new Properties()
