Revert "Merge remote-tracking branch 'origin/master' into Adapter2"
This reverts commit 96e047223a8e9ccb5482489fb432802721a2e631.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,10 +57,8 @@
         <activity
             android:name=".CameraView.CameraActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".CameraView.PicturePreviewActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".CameraView.VideoPreviewActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".CameraView.PicturePreviewActivity" />
+        <activity android:name=".CameraView.VideoPreviewActivity" />
         <activity android:name=".ImageViewer.CommentGalleryActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ImageViewer.GalleryActivity"
